--- a/Proyecto_PC_Soluciones/Views/ECommerce/Mensaje.cshtml
+++ b/Proyecto_PC_Soluciones/Views/ECommerce/Mensaje.cshtml
@@ -1,4 +1,10 @@
-﻿<h1>Portal de ventas</h1>
+﻿
+@{
+    ViewData["Title"] = "Mensaje";
+    Layout = "~/Views/Shared/_LayoutLogin.cshtml";
+}
+
+<h1>Portal de ventas</h1>
 <div>
     <h3 style="text-align:center">@ViewBag.mensaje</h3>
 </div>
