--- a/Proyecto_PC_Soluciones/Views/ECommerce/Portal.cshtml
+++ b/Proyecto_PC_Soluciones/Views/ECommerce/Portal.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Portal";
+    Layout = "~/Views/Shared/_LayoutLogin.cshtml";
 }
 <link rel="stylesheet" href="~/css/estilos.css" />
 <h1>Portal de Ventas</h1>
