--- a/Proyecto_PC_Soluciones/Views/Home/Articulos.cshtml
+++ b/Proyecto_PC_Soluciones/Views/Home/Articulos.cshtml
@@ -1,4 +1,8 @@
-﻿<!DOCTYPE html>
+﻿@{
+    Layout = "~/Views/Shared/_LayoutLogin.cshtml";
+}
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
