--- a/Proyecto_PC_Soluciones/Views/Shared/_LayoutLogin.cshtml
+++ b/Proyecto_PC_Soluciones/Views/Shared/_LayoutLogin.cshtml
@@ -80,6 +80,9 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Articulo" asp-action="Edit">Actualizar Producto</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Consulta" asp-action="Pedido">Consulta Fechas</a>
+                            </li>
                         }
 
                     </ul>
