--- a/Proyecto_PC_Soluciones/Views/ECommerce/Portal.cshtml
+++ b/Proyecto_PC_Soluciones/Views/ECommerce/Portal.cshtml
@@ -5,6 +5,7 @@
     Layout = "~/Views/Shared/_LayoutLogin.cshtml";
 }
 <link rel="stylesheet" href="~/css/estilos.css" />
+<div id="fondo">
 <h1>Portal de Ventas</h1>
 
 <p>
@@ -31,3 +32,16 @@
         </div>
 }
 </div>
+</div>
+
+<style>
+#fondo{
+    width: 1150px;
+    height: 2030px;
+    background-image: url(https://img.freepik.com/foto-gratis/textura-madera-color-amarillo_295969-687.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position:center;
+}
+
+</style>
