--- a/Proyecto_PC_Soluciones/Views/Home/Nosotros.cshtml
+++ b/Proyecto_PC_Soluciones/Views/Home/Nosotros.cshtml
@@ -59,12 +59,11 @@
             <br />
             <br />
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                Es una empresa peruana que comenzó sus operaciones el 7 julio del 2003 exclusivamente dedicada
+                a la comercialización de Equipos de tecnología de vanguardia de la más alta Gama, las mejores
+                marcas de prestigio mundial, en el rubro de Computadoras, Laptops, Tablet, Partes, Piezas,
+                Componentes, Accesorios y Suministros para clientes finales y distribuidores; marcando así
+                la tendencia tecnológica en nuestro País
             </p>
         </div>
 
