--- a/Proyecto_PC_Soluciones/wwwroot/css/estilos.css
+++ b/Proyecto_PC_Soluciones/wwwroot/css/estilos.css
@@ -2,8 +2,8 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     column-gap: 10px;
-    row-gap:10px;
-    background-color: darkgrey;
+    row-gap: 10px;
+    /*background-color: darkgrey*/
 }
 
 .registro {
