--- a/Proyecto_PC_Soluciones/Views/Login/Inicio.cshtml
+++ b/Proyecto_PC_Soluciones/Views/Login/Inicio.cshtml
@@ -3,12 +3,13 @@
 @{
     ViewData["Title"] = "Inicio";
 }
+<div id="fondo">
+<h1 style="text-align:center">Inicio de Sesión</h1>
 
-<h1>Inicio de Sesión</h1>
-
-<hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="row padre">
+    
+    <div class="col-md-4 hijo" style="background-color:#AFDC28">
+        <br />
         <form asp-action="Inicio">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -21,19 +22,45 @@
                 <input asp-for="pass_usuario" type="password" class="form-control" />
                 <span asp-validation-for="pass_usuario" class="text-danger"></span>
             </div>
+            <br />
             <div class="form-group">
-                <a asp-action="Inicio" class="btn btn-primary">Limpiar</a>
+                <a asp-action="Inicio" class="btn btn-danger">Limpiar</a>
                 <input type="submit" value="Loguear" class="btn btn-primary" />
             </div>
         </form>
+        <br />
+        <div >
+    <p >Si aún no tienes cuenta: <a class="btn btn-info" asp-action="Create">Regístrate</a></p>
+    
+</div>
     </div>
 </div>
 
-<div>
-    <p>Si aún no tienes cuenta: <a asp-action="Create">Regístrate</a></p>
-    
+
+
+
 </div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+
+<style>
+.padre {
+  height: 150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.hijo {
+    border-color: gray;
+  border-width: 1px;
+  border-style: dotted;
+}
+
+
+p {
+  text-align: center;
+}
+
+</style>
