--- a/Proyecto_PC_Soluciones/Views/Articulo/Edit.cshtml
+++ b/Proyecto_PC_Soluciones/Views/Articulo/Edit.cshtml
@@ -5,9 +5,8 @@
     Layout = "~/Views/Shared/_LayoutLogin.cshtml";
 }
 
-<h1>Edit</h1>
+<h1>Actualizar Articulo</h1>
 
-<h4>Articulo</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -34,7 +33,7 @@
                 <span asp-validation-for="stock_articulo" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Guardar" class="btn btn-primary" />
                 <a asp-action="Index" class="btn btn-primary">Retornar</a>
             </div>
         </form>
