--- a/Proyecto_PC_Soluciones/Views/Shared/_LayoutLogin.cshtml
+++ b/Proyecto_PC_Soluciones/Views/Shared/_LayoutLogin.cshtml
@@ -72,16 +72,16 @@
                         {
                             @*SOLO LO VERÁ EL ADMIN*@
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Articulo" asp-action="Index">Listado de Productos</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Articulo" asp-action="Index">Mantenimiento de Productos</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Articulo" asp-action="Create">Agregar Producto</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Articulo" asp-action="Edit">Actualizar Producto</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Usuario" asp-action="Index">Mantenimiento de usuarios</a>
                             </li>             
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Consulta" asp-action="Pedido">Consulta Fechas</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Consulta" asp-action="Pedido">Consulta de Pedidos</a>
                             </li>
                         }
 
