--- a/Proyecto_PC_Soluciones/Views/Articulo/Create.cshtml
+++ b/Proyecto_PC_Soluciones/Views/Articulo/Create.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_LayoutLogin.cshtml";
 }
 
-<h1>Create</h1>
+<h1>Registrar</h1>
 
 <h4>Articulo</h4>
 <hr />
@@ -30,7 +30,7 @@
             </div>
             <div class="form-group">
                 <a asp-action="Create" class="btn btn-primary">Limpiar</a>
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Registrar" class="btn btn-primary" />
                 <a asp-action="Index" class="btn btn-primary">Retornar</a>
             </div>
         </form>
