--- a/Proyecto_PC_Soluciones/Views/Shared/_LayoutLogin.cshtml
+++ b/Proyecto_PC_Soluciones/Views/Shared/_LayoutLogin.cshtml
@@ -72,10 +72,10 @@
                         {
                             @*SOLO LO VERÁ EL ADMIN*@
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Articulo" asp-action="Index">Mantenimiento de Productos</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Articulo" asp-action="Index">Mantenimiento de Artículos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Articulo" asp-action="Create">Agregar Producto</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Articulo" asp-action="Create">Agregar Artículo</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Usuario" asp-action="Index">Mantenimiento de usuarios</a>
